fixing overflow code block issue on tablet size

--- a/assets/scss/partials/_video.scss
+++ b/assets/scss/partials/_video.scss
@@ -35,7 +35,6 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    filter: grayscale(100%);
     cursor: pointer;
     margin-top: -1em;
     &:before {
